[package]
name = "particle-mesh"
version = "1.0.0"
edition = "2021"
description = "A small program to draw a moving particle mesh onto the screen"
keywords = ["nannou", "graphics", "animation", "particles"]
license = "MIT OR Apache-2.0"

[dependencies]
nannou = "^0.18"
clap = { version = "^4", features = ["derive"] }
rayon = "1"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
