[package]
name = "particle-mesh-macroquad"
version = "1.0.0"
description = "A small program to draw a moving particle mesh onto the screen"
keywords = ["macroquad", "graphics", "animation", "particles"]
edition.workspace = true
license.workspace = true

[dependencies]
macroquad = "0.4"
clap = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
