[package]
name = "particle-mesh-nannou"
version = "1.0.0"
description = "A small program to draw a moving particle mesh onto the screen"
keywords = ["nannou", "graphics", "animation", "particles"]
edition.workspace = true
license.workspace = true

[dependencies]
nannou = "^0.19"
clap = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
